<resources>
    <string name="default_notification_channel_id">my_channel</string>
    <string name="app_name">LearnAhead_Prototyp</string>
    <string name="kein_konto">
    Du hast noch kein Konto?
    </string>


    <string name="anmelden">
    Anmelden
    </string>

    <string name="passwort_ve">
    Passwort vergessen?
    </string>

    <string name="passwort">
    Passwort
    </string>

    <string name="benutzer_e_">
    Benutzer / E-Mail
    </string>

    <string name="login_top">
    Anmeldung
    </string>

    <string name="logo">
    Logo
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="note_item_desc_placholder">In this chapter, you’re going to learn about the different types of subjects in RxJava, see how to work with each one and why you might choose one over another based on some common use cases.</string>
    <string name="note_detail_desc_placeholder">You’ve gotten a handle on what an Observable is, how to create one, how to subscribe to it, and how to dispose of things when you’re done. Observables are a fundamental part of RxJava, but a common need when developing apps is to manually add new values onto an Observable at runtime that will then be emitted to subscribers. What you want is something that can act as both an Observable and as an observer. And that something is called a subject.</string>
    <string name="error_description">Description missing</string>
    <string name="error_title">Title missing</string>
    <string name="error_tag_text">Enter text</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>


    <!-- Produktiv Strings -->
    <string name="register_subject">Registrierung</string>
    <string name="username">Benutzername</string>
    <string name="email_address">E-Mail-Adresse</string>
    <string name="password">Passwort</string>
    <string name="register_verb"> Registrieren</string>
    <string name="got_already_an_account"> Du hast schon ein Konto?</string>
    <string name="not_have_an_account"> Du hast noch kein Konto?</string>
    <string name="login">Login</string>
    <string name="login_subject">Anmeldung</string>
    <string name="login_verb">Anmelden</string>
    <string name="forgot_password">Passwort vergessen</string>
    <string name="forgot_password_question">Passwort vergessen?</string>
    <string name="send">Senden</string>
    <string name="learning_goal_for_today">Heutige Lernziele</string>
    <string name="add_learning_goal">Lernziel erstellen</string>
    <string name="home">Home</string>
    <string name="learning_categories">Lernkategorien</string>
    <string name="add_learning_category">Lernkategorie erstellen</string>
    <string name="learning_goals">Lernziele</string>
    <string name="learning_goal_title">Lernziel Name:</string>
    <string name="learning_goal_start_date">Start Datum:</string>
    <string name="learning_goal_end_date">Ziel Datum:</string>
    <string name="learning_goal_description">Beschreibung:</string>
    <string name="card_view_hint_goal_title">Goal Title</string>
    <string name="card_view_hint_date_interval">Date Interval</string>
    <string name="card_view_hint_calculated_left_days">Calculated left Days</string>
    <string name="learning_category_name">Lernkategorie Name: </string>
    <string name="hint_learning_category_name">Lernkategorie Name eingeben</string>
    <string name="card_view_hint_learning_category_name">Lernkategorie Name</string>
    <!-- Section Profile -->
    <string name="profile">Profil</string>
    <string name="biggest_learnstreak">Aktuelle Lernstreak</string>
    <string name="learning_goals_reached">Lernziele erreicht</string>
    <string name="placeholder_username">Der Benutzername</string>
    <string name="placeholder_email">Die E-Mail</string>
    <string name="placeholder_password">Das Passwort</string>
    <string name="placeholder_learning_streak">Die höchste Learning Streak</string>
    <string name="placeholder_achieved_goals">Die erreichten Ziele</string>
    <string name="summary_label">Zusammenfassungen</string>
    <string name="create_summary">Zusammenfassung erstellen</string>
    <string name="summary_name">Name der Zusammenfassung</string>
    <string name="enter_summary_name">Name der Zusammenfassung eingeben...</string>
    <string name="remaining_summary_items">enthält %1$d weitere Zusammenfassungen</string>
    <string name="placeholder">Platzhalter</string>
    <string name="tests_and_questions">Tests / Fragen</string>
    <string name="learning_tip_of_the_day">Lerntipp des Tages:</string>
    <string name="learning_tip_of_the_day_placeholder">Wenn wir kurz vor dem Schlafengehen noch einmal das Gelernte durchgehen, wird unser Gehirn erneut stimuliert und die neu gebildeten Verbindungen werden gestärkt. Dies führt dazu, dass die Informationen besser im Langzeitgedächtnis abgespeichert werden und später leichter abgerufen werden können.</string>
    <string name="questions">Fragen</string>
    <string name="test_annotation">Anmerkung: Klicke auf einen Test um ihn zu editieren. Wenn du ihn starten möchtest, gehe bitte zurück und klicke auf “Test Starten”</string>
    <string name="tests">Tests</string>
    <string name="create_test">Test erstellen</string>
    <string name="create_question">Frage erstellen</string>
    <string name="add_question">Frage hinzufügen</string>
    <string name="choose_a_type_of_test">Wähle eine Art von Test aus:</string>
    <string name="add_tags">Tags hinzufügen</string>
    <string name="question_colon">Frage:</string>
    <string name="answer_colon">Antwort:</string>
    <string name="markdown_input_description">Hier kommt die Zusammenfassung hin...</string>
    <string name="please_enter_here_your_learning_goal">Bitte gebe hier dein Lernziel ein</string>
    <string name="please_enter_here_your_description">Bitte gebe hier deine Beschreibung ein</string>
    <string name="relate_learning_goal_to_learning_category">Das Ziel eine Lernkategorie zuordnen:</string>
    <string name="preview">Vorschau</string>
    <string name="randomLearningTip">Zufälliger Lerntipp:</string>
    <string name="level">Level</string>
    <string name="please_enter_your_question">Bitte geben Sie hier ihre Frage ein:</string>
    <string name="please_enter_here_your_answer">Bitte geben Sie hier ihre Antwort ein:</string>
    <string name="search">Suche</string>
    <string name="edit">Bearbeiten</string>
    <string name="related_tags">Zugehörige Tags</string>
    <string name="shown_question">Angezeigte Frage</string>
    <string name="learning_goal_name">Lernziel Name:</string>
    <string name="continue_learning_goal">Weiter machen</string>
    <string name="start_learning_goal">Beginnen</string>


</resources>