<!-- Android Large - Login -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_lar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/android_lar"
    android:clipToOutline="true">

    <!-- Dunkler Hintergrund über den gesamten Bildschirm -->
    <View
        android:id="@+id/darkBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_full_screen"
        />

    <!-- Schwarzer Hintergrund für das untere Menü -->
    <View
        android:id="@+id/bottomMenuBackground"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignBottom="@id/darkBackground"
        android:background="@drawable/black_bottom_menu"
        android:backgroundTint="@null"
        />

    <!-- Back Icon -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/back_button"
        android:elevation="7dp"
        android:rotation="-90" />

    <!-- Header Label -->
    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="@style/twenty_two_sp_bold_white"
        android:layout_toEndOf="@id/backIcon"
        android:layout_above="@id/headerLine"
        android:layout_marginBottom="5dp"/>

    <!-- Horizontale Linie als Header -->
    <View
        android:id="@+id/headerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/backIcon"
        android:background="@drawable/header_line"
        />

    <!-- Logout Icon -->
    <ImageView
        android:id="@+id/logoutIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/darkBackground"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/logout"
        android:elevation="7dp" />

    <!-- Buttons Container -->
    <LinearLayout
        android:id="@+id/containerForButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLine"
        android:layout_marginTop="8dp"
        android:gravity="center">

        <!-- Edit Button -->
        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@null"
            app:backgroundTint="@null"
            android:textAppearance="@style/twenty_sp_bold_black"
            android:background="@drawable/markdown_button"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textMarkdown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:minLines="10"
        android:scrollbars="vertical"
        android:layout_below="@id/containerForButtons"
        android:contentDescription="@string/markdown_input_description"
        android:layout_above="@id/bottomMenuBackground"
        android:textColor="@color/white"
        android:textSize="14sp"/>


    <!-- Home Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/bottomMenuBackground"
        android:layout_alignBottom="@id/bottomMenuBackground"
        android:drawableTop="@drawable/home_button"
        android:layout_marginStart="4dp"
        app:iconPadding="-5dp"
        android:text="@string/home"
        android:textAppearance="@style/twelve_sp_bold_white"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />

    <!-- Learning Categories Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/learningCategoriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/bottomMenuBackground"
        android:layout_alignBottom="@id/bottomMenuBackground"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/learning_category_button"
        app:iconPadding="-5dp"
        android:text="@string/learning_categories"
        android:textAppearance="@style/twelve_sp_bold_white"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />

    <!-- Learning Goals Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/learningGoalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/bottomMenuBackground"
        android:layout_alignBottom="@id/bottomMenuBackground"
        android:layout_alignEnd="@id/bottomMenuBackground"
        android:layout_marginEnd="4dp"
        android:drawableTop="@drawable/learning_goal_button"
        app:iconPadding="-5dp"
        android:text="@string/learning_goals"
        android:textAppearance="@style/twelve_sp_bold_white"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />
</RelativeLayout>