<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/android_lar"
    android:clipToOutline="true">

    <!-- Dark Background Full Screen -->
    <View
        android:id="@+id/dark_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_full_screen"
        />

    <!-- Black Background for Bottom Menu -->
    <View
        android:id="@+id/background_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/dark_background"
        android:background="@drawable/black_bottom_menu"
        android:backgroundTint="@null"
        />

    <!-- Back Icon -->
    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/back_button"
        android:elevation="7dp"
        android:rotation="-90" />

    <!-- Profil Header Label -->
    <TextView
        android:id="@+id/learning_goal_menu_header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="@style/top_menu_header"
        android:layout_toEndOf="@id/back_icon"
        android:layout_above="@id/header_line"
        android:layout_marginBottom="5dp"/>

    <!-- Header Line -->
    <View
        android:id="@+id/header_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/back_icon"
        android:background="@drawable/header_line"
        />

    <!-- Logout Icon -->
    <ImageView
        android:id="@+id/logout"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/dark_background"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/logout"
        android:elevation="7dp" />

    <!-- Home Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/background_bottom_menu"
        android:layout_alignBottom="@id/background_bottom_menu"
        android:drawableTop="@drawable/home_button"
        android:layout_marginLeft="4dp"
        app:iconPadding="-15dp"
        android:text="@string/home"
        android:textAppearance="@style/menu_button_text"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />

    <!-- Learning Categories Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_learning_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/background_bottom_menu"
        android:layout_alignBottom="@id/background_bottom_menu"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/learning_category_button"
        app:iconPadding="-15dp"
        android:text="@string/learning_categories"
        android:textAppearance="@style/menu_button_text"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />

    <!-- Learning Goals Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_learning_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/background_bottom_menu"
        android:layout_alignBottom="@id/background_bottom_menu"
        android:layout_alignRight="@id/background_bottom_menu"
        android:layout_marginRight="4dp"
        android:drawableTop="@drawable/learning_goal_button"
        app:iconPadding="-15dp"
        android:text="@string/learning_goals"
        android:textAppearance="@style/menu_button_text"
        android:textColor="@null"
        android:background="@android:color/transparent"
        />

    <!-- Item Layout -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/header_line"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <!-- Question -->
    <TextView
        android:id="@+id/button_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_line"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/question_test_rectangle"
        android:elevation="8dp"
        android:visibility="invisible"
        android:text="@string/questions"
        android:textAppearance="@style/twenty_sp_bold"
        android:textColor="@null"
        android:gravity="center_horizontal|center_vertical"
        app:backgroundTint="@null"
        tools:ignore="RtlSymmetry" />

    <!-- Tests -->
    <TextView
        android:id="@+id/button_tests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_questions"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/question_test_rectangle"
        android:elevation="8dp"
        android:visibility="invisible"
        android:text="@string/tests"
        android:textAppearance="@style/twenty_sp_bold"
        android:textColor="@null"
        android:gravity="center_horizontal|center_vertical"
        app:backgroundTint="@null"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/button_tests_and_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_tests_questions"
        android:drawablePadding="8dp"
        android:paddingStart="24dp"
        android:elevation="8dp"
        android:text="@string/tests_and_questions"
        android:textAppearance="@style/summary_label_inner_view"
        android:textColor="@null"
        android:gravity="center_vertical"
        app:backgroundTint="@null"
        app:drawableStartCompat="@drawable/folder_icon"
        tools:ignore="RtlSymmetry" />


    <!-- LernTipp Box -->
    <View
        android:id="@+id/rectangle_learning_tip_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/button_tests_and_questions"
        android:layout_above="@id/background_bottom_menu"
        android:layout_centerHorizontal="true"
        android:background="@drawable/learning_tip_of_the_day_rectangle"
        android:elevation="2dp" />

    <TextView
        android:id="@+id/learning_tip_of_the_day_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_tip_of_the_day"
        android:textAppearance="@style/summary_label_inner_view"
        android:textColor="@null"
        android:layout_alignTop="@id/rectangle_learning_tip_box"
        android:layout_alignStart="@id/rectangle_learning_tip_box"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:elevation="8dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/learning_tip_of_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_tip_of_the_day_placeholder"
        android:gravity="start|top"
        android:textAppearance="@style/learning_tip_of_the_day"
        android:textColor="@null"
        android:layout_below="@id/learning_tip_of_the_day_header"
        android:layout_alignStart="@id/rectangle_learning_tip_box"
        android:layout_alignEnd="@id/rectangle_learning_tip_box"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:elevation="8dp"
        tools:ignore="RtlSymmetry" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>
